2011-02-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm: Add missing TERM_ALPHA_CHANNEL flag for pdfcairo

2011-02-10  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm (WIN_set_font) src/win/wgraph.c (GraphChangeFont):
	Do not initialize to an empty font name.
	Bugfix

2011-02-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua.trm (LUA_set_color): Initialize rgb_color for the case TC_LT.
	term/lua/gnuplot-tikz.lua: Work around failure to handle LT_NODRAW
	and LT_BACKGROUND. This prevents a freeze, but is not a complete fix.
	Bugfix

	* src/save.c (save_linetype): save/show variable linecolor correctly.

2011-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_filled_polygon): Explicitly set a zero-width
	same-color border for filled polygons, otherwise it inherits a border
	line style.
	Bug #3165902

2011-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* set/set.c (set_decimalsign):  Possible fix for problem with
	numeric locales on Windows.  Bug #3120819.

2011-01-22  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Fix typo in previous definition of _WIN32_WINNT.

2011-01-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Pass mouse wheel events through to the core
	mousing code so that interactive pan/zoom works from the windows
	terminal.

2011-01-17  James R. Van Zandt  <jrvz@comcast.net>
	* src/mouse.c (event_buttonpress) src/wxterminal/wxt_gui.cpp
	src/wxterminal/wxt_gui.h: Implement pan and zoom via mouse wheel.
	Back-ported from 4.5.

2011-01-10  David Kuehling <dvdkhlng@gmx.de>

	* term/linux.trm:  Makes linux.trm work with all SVGAlib video modes,
	not only 16 and 256-color modes.

	* src/term.c(init_terminal):  Correct the auto-selection of terminal
	type vgagl or linux.  Only select vgagl if lib3dkit is present.

2010-12-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h src/graphics.c:  Use t->set_color() rather than