@@ -1,3 +1,9 @@
+2011-02-17  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/internal.c (f_calln): Limit recursion depth for multi-variable
+	functions in the same manner as for single-variable functions.
+	Bug #3184671
+
 2011-02-12  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/cairo.trm: Add missing TERM_ALPHA_CHANNEL flag for pdfcairo
